# litchi

./: .gitmodules  CMakeLists.txt  README.md  geometryHelpers.hpp  irreducibleMinkTens.hpp  litchi_eat.hpp  litchi_kernel.hpp  litchi_peel.hpp  litchi_pulp.hpp  litchi_wrap.cpp  litchi_wrap.hpp  minkTensorIntegrand.hpp  minkTensorStack.hpp  minkmapSphere.hpp  paramStruct.hpp  pybindings.cpp  pybindings_debug.cpp  regnitz  regnitz.cpp  regnitzcopy1.cpp  tensor2D.hpp  tensorFamily.hpp  tensorOperations.hpp  testGeometry.cpp  testmap.fits  testmap2.fits  tests.cpp
doc/: doxygen.config
